Fix: Implement async API calls and enhanced logging for DeBank integration
- Convert DeBankService to use async httpx.AsyncClient for proper async/await support
- Add comprehensive debug logging to track protocol detection and position parsing
- Enhance error handling with circuit breaker and retry logic
- Fix position data parsing from DeBank API response structure
- Successfully verified API working with real Uniswap v3 position data

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,11 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
-COPY . .
+# Copy application code - maintain backend directory structure
+COPY . ./backend
+
+# Set Python path so imports work
+ENV PYTHONPATH=/app
 
 # Expose port
 EXPOSE 8004
