--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   redis:
     image: redis:7-alpine
     ports:
-      - "6379:6379"
+      - "6380:6379"  # External port 6380, internal Redis still uses 6379
     volumes:
       - redis_data:/data
     command: redis-server --appendonly yes
@@ -28,7 +28,7 @@ services:
       - ENVIRONMENT=development
       - BACKEND_PORT=8004
     volumes:
-      - ./backend:/app
+      - ./backend:/app/backend
     depends_on:
       redis:
         condition: service_healthy
