--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - BACKEND_PORT=8004
     volumes:
       - ./backend:/app/backend
+      - transaction_cache:/app/cache
     depends_on:
       redis:
         condition: service_healthy
@@ -38,3 +39,4 @@ services:
 
 volumes:
   redis_data:
+  transaction_cache:
